# AITypingTrainer

./: .coverage  .env  .gitignore  .pre-commit-config.yaml  .windsurfrules  AITypingTrainer.code-workspace  AITypingTrainer.spec  AiTypingApp.py  README.md  UV_USAGE_MEMORY.md  ai_typing.py  all_snippet_tests.txt  app-AdamsAMD.py  app.py  category_api_test_output.txt  check_db.py  check_db_schema.py  check_tables.py  conftest.py  copy_snippet_parts.py  core_test_errors.txt  create_system_user.py  database.py  db_path_debug.txt  dbviewer_list_tables_debug.txt  debug_keystroke_test.py  debug_practice_session.py  debug_pytest.py  debug_retry_test.py  debug_session.py  debug_session_error.py  debug_session_specific.py  debug_simple.py  debug_snippet_error.py  debug_snippet_id_none.py  debug_snippet_tests.py  debug_snippet_tests_fixed.py  delete_tables.py  desktop_ui.py  disable_cloud_db_tests.ps1  (+88 more)
ClassDiagrams/: category_dgm.md  category_manager.md  category_service.md  database_manager.md  database_manager_dgm.md  database_viewer_service_dgm.md  dynamic_content_service_dgm.md  exceptions_dgm.md  interfaces_dgm.md  keyboard.md  keyboard_manager.md  keyset_dgm.md  keyset_manager_dgm.md  keystroke.md  keystroke_dgm.md  keystroke_manager.md  keystroke_manager_dgm.md  library.md  library_service.md  llm_ngram_service_dgm.md  ngram.md  ngram_analytics_service_dgm.md  ngram_manager_dgm.md  session.md  session_manager_dgm.md  setting_dgm.md  setting_manager_dgm.md  setting_type_dgm.md  settings_cache.md  settings_manager_dgm.md  snippet_dgm.md  snippet_manager.md  user.md  user_manager.md
DB_Backup/: session_bigram_error_2025-04-12.json  session_trigram_error_2025-04-12.json  snippet_parts_2025-04-12.json  special_chars_2025-04-13.json  special_chars_2025-04-15.json  special_chars_2025-04-16.json  test_table_2025-04-13.json  test_table_2025-04-15.json  test_table_2025-04-16.json  text_category_2025-04-12.json  text_snippets_2025-04-12.json
MemoriesAndRules/: RequirementDocuments.md  RequirementsMarkdown.md  code_generation_standards.md  history_standards.md  python_coding_standards.md  tdd_delivery.md  testing_and_trustability.md  ui_standards.md
Prompts/: AITyping.md  AllUML.md  Category.md  DBViewer.md  Data Management Jobs.txt  DatabaseContentViewer.txt  DatabaseManager.md  DrillConfig.md  DrillConfig.txt  DynamicConfig.md  DynamicContent.md  DynamicContentService.md  GenerateNewDrills.md  History.txt  Keyboard.md  Keysets.md  Keystroke.md  Library.md  Library.txt  MainMenu.md  MetroidTypingGame.md  NGramAnalyticsService.md  PracticeSession.md  ResetSessionDetails.txt  Session.md  Settings.md  Snippet.md  TypingDrill.md  TypingDrillPage.txt  UserSettings.md  ngram.md  ngram_drill_text.txt  ngram_words_by_wordcount.txt  ngram_words_prompt.txt
Requirements/: Category_req.md  ConsistencyTyping.md  DBViewer.md  DatabaseManager_req.md  DockerManager.md  DrillConfig.md  Keyboard.md  Keystroke.md  Keystroke_req.md  NGramAnalyticsService.md  Ngram_req.md  PracticeSession.md  Progress_Dialog.md  Session.md  Setting_type_mgr_ui_req.md  Settings_req.md  User.md  heatmap.md  ngram.md
SQL/: ngram_speed_summary.sql
Spikes/: README.md  SpikeDockerManager.py  example_pytest_fixtures.py  hit_aws_aurora.py  insert_setting_types.py  simple_hit_aws.py  spike_check_settings_schema.py  spike_docker.py  spike_setting_cache.py  test_tmp_db_methods.py  tmp_fixtures.py  update_settings_checksums.py  validate_setting_types.py
UsefulCodeGenPrompts/: add_functionality.md  fix_a_defect.md
aitypingtrainer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
api/: __init__.py  category_api.py  category_graphql.py  dbviewer_api.py  error_api.py  keystroke_api.py  library_graphql.py  ngram_api.py  run_library_api.py  session_api.py  snippet_api.py  snippet_graphql.py  unified_graphql.py
backup/: ngram_analytics_service.py  ngram_manager.py
config/: api_keys.enc  docker_manager.json
db/: README.md  __init__.py  database_manager-AdamsAMD.py  database_manager.py  exceptions.py  interfaces.py  migrate_ngram_tables.py  table_operations.py  typing_data.db
desktop_ui/: __init__.py  _snippet_main.py  admin.py  api_key_dialog.py  api_server_manager.py  catchup_speed_summary.py  category_model_test.db  category_model_tester.py  cleanup_data_dialog.py  consistency_typing.py  db_viewer_dialog.py  drill_config-SeanYoga.py  drill_config.py  drill_screen_tester.py  dynamic_config.py  games_menu.py  graphql_client.py  keysets_dialog.py  library_main.py  library_manager.py  library_service.py  main_menu.py  metroid_typing_game.py  modern_dialogs.py  ngram_heatmap_screen.py  ngram_llm_screen.py  progress_dialog.py  query_screen.py  recreate_ngram_data.py  scaffold_add_speed_summary_for_session.py  scaffold_bulk_insert_performance.py  scaffold_catchup_speed_summary.py  scaffold_llm_call.py  scaffold_recreate_ngram_data.py  scaffold_summarize_session_ngrams.py  setting_type_dialogs.py  setting_type_manager.py  snippet_model_test.db  snippet_model_tester.py  snippet_scaffold.py  (+7 more)
examples/: service_usage_example.py
helpers/: __init__.py  debug_util.py  error_utils.py
migrations/: 002_remove_ngram_count_occurrence.py
models/: __init__.py  category.py  category_manager.py  (+48 more)
(+271 files in other folders)
