[metadata]
name = aitypingtrainer
version = 0.1.0
description = AI Typing Trainer application

[options]
packages = find:
install_requires =
    pytest>=6.0
    pytest-cov>=2.0
    pytest-qt
    pytest-mock

[options.packages.find]
where = .
include = models* tests* web_ui desktop_ui services api db

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*
python_classes = Test*
pythonpath = .


